include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_source(text_parser.cxx)
add_source(kea_mmap.cxx)
add_source(kea_doc.cxx)
add_source(segment_tool.cxx)
add_source(token_dict.cxx)
add_source(token_aff_dict.cxx)
add_source(token_filter.cxx)
add_source(ranker.cxx)
add_source(prepare_ranker.cxx)
add_source(tfidf_ranker.cxx)
add_source(graph_ranker.cxx)
add_source(udgraph.cxx)
add_source(kea_hash.cxx)
add_source(kea.cxx)

add_library(kea_static STATIC ${sub_sources})
